fix: navbar on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Avenir:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,400&display=swap');
+
+@font-face {
+  font-family: "Avenir";
+  src: url("/public/assets/fonts/Avenir.ttc");
+}
+@font-face {
+  font-family: "Avenir";
+  src: url("/public/assets/fonts/AvenirLTStd-Black.otf");
+  font-weight: bold;
+}
+@font-face {
+  font-family: "Avenir";
+  src: url("/public/assets/fonts/AvenirLTStd-Roman.otf");
+  font-style: italic, oblique;
+}
+@font-face {
+  font-family: "Avenir";
+  src: url("/public/assets/fonts/AvenirLTStd-Book.otf");
+  font-weight: bold;
+  font-style: italic, oblique;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
